# LR6

./: CMakeLists.txt
Task_1/: CMakeLists.txt  clang-tidy  header.h  input.cpp  main  main.cpp  solve.cpp  str.cpp  test  test.cpp
Task_2/: CMakeLists.txt  header.h  input.cpp  main  main.cpp  read.cpp  solve.cpp  test  test.cpp
Task_3/: CMakeLists.txt  header.h  input.cpp  main  main.cpp  read.cpp  solve.cpp  test  test.cpp
